sema/testdata/gcc-c99-extra/reject/pr69650.c
# 9 "somefile" 2
not_a_type a;
